--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -116,7 +116,7 @@
 				font-size: 14.5px;
 				line-height: 38px;
 				letter-spacing: 0.05em;
-				text-transform: uppercase;
+				text-transform: none;
 				text-decoration: none;
 
 				transition: color 0.2s ease-in-out;
