--- a/css/twitter.css
+++ b/css/twitter.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
 .timeline-Widget {
   background: #f1f1f1;
 }
