--- a/css/twitter.css
+++ b/css/twitter.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
+ol {
+  list-style: none;
+  padding: 0;
+}
+
 .timeline-Widget {
   background: #f1f1f1;
 }
@@ -54,6 +59,28 @@
   font-size: 15px;
   line-height: 22px;
   white-space: initial;
+}
+
+.timeline-Tweet-timestamp a {
+  text-decoration: none;
+}
+
+.NaturalImage-image {
+  max-width: 100%;
+}
+
+.js-interstitial {
+  display: none;
+}
+
+.MediaCard-mediaContainer {
+  padding-bottom: 0 !important;
+}
+
+.timeline-Footer,
+.timeline-LoadMore,
+.timeline-NewTweetsNotification {
+  display: none;
 }
 
 .timeline-Tweet-metadata time {
