--- a/sass/twitter.scss
+++ b/sass/twitter.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap');
 
+ol {
+	list-style: none;
+	padding: 0;
+}
+
 .timeline-Widget {
 	background: #f1f1f1;
 }
@@ -56,6 +61,28 @@
 	font-size: 15px;
 	line-height: 22px;
 	white-space: initial;
+}
+
+.timeline-Tweet-timestamp a {
+	text-decoration: none;
+}
+
+.NaturalImage-image {
+	max-width: 100%;
+}
+
+.js-interstitial {
+	display: none;
+}
+
+.MediaCard-mediaContainer {
+	padding-bottom: 0 !important;
+}
+
+.timeline-Footer,
+.timeline-LoadMore,
+.timeline-NewTweetsNotification {
+	display: none
 }
 
 .timeline-Tweet-metadata time {
