--- a/css/style.css
+++ b/css/style.css
@@ -1810,8 +1810,7 @@ body {
   border: 1px solid #388067;
   border-radius: 2px;
   content: '';
-  display: inline-block;
-  width: 100%;
+  display: block;
   margin-top: 5px;
   transform: scaleX(1);
   transform-origin: 0 50%;
@@ -1856,6 +1855,9 @@ body {
   font-size: 0;
   line-height: 24px;
   transition: background 0.2s ease-in-out;
+}
+.hero-slides.owl-carousel .owl-dot:hover {
+  background: transparent url("../images/ellipse-empty.svg") no-repeat left center/24px 24px;
 }
 .hero-slides.owl-carousel .owl-dot.active {
   background: transparent url("../images/ellipse-selected.svg") no-repeat left center/24px 24px;
@@ -2110,7 +2112,7 @@ body {
   margin-bottom: 15px;
 }
 .insights-wrapper .title-link:hover {
-  color: #388067;
+  text-decoration: underline;
 }
 .insights-wrapper .img-wrapper {
   max-width: 264px;
