--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -18,8 +18,7 @@ body {
 		border-radius: 2px;
 
 		content: '';
-		display: inline-block;
-		width: 100%;
+		display: block;
 	
 		margin-top: 5px;
 		transform: scaleX(1);
@@ -76,6 +75,10 @@ body {
 			line-height: 24px;
 
 			transition: background 0.2s ease-in-out;
+
+			&:hover {
+				background: transparent url('../images/ellipse-empty.svg') no-repeat left center / 24px 24px;
+			}
 
 			&.active {
 				background: transparent url('../images/ellipse-selected.svg') no-repeat left center / 24px 24px;
@@ -401,8 +404,29 @@ body {
 	.title-link {
 		margin-bottom: 15px;
 
+		// &:after {
+		// 	content: '';
+		// 	display: block;
+		// 	border: 1px solid #fff;
+		// 	border-radius: 2px;
+		// 	width: 100%;
+
+		// 	position: absolute;
+		// 	bottom: -10px;
+			
+		// 	transform-origin: 100% 50%;
+		// 	transform: scaleX(0);
+		// 	transition: transform .2s ease;
+		// }
+
 		&:hover {
-			color: #388067;
+			text-decoration: underline;
+			// position: relative;
+
+			// &:after {
+			// 	transform: scaleX(1);
+			// 	transform-origin: 0 50%;
+			// }
 		}
 	}
 
